# my_beginner_tutorials

./: .clangd  LICENSE  README.md
beginner_tutorials/: .clangd  CMakeLists.txt  compile_commands.json  package.xml
beginner_tutorials/.cache/clangd/index/: publisher_member_function.cpp.C44352BBFC8BFDC5.idx  subscriber_member_function.cpp.65241B466FD34EB6.idx
beginner_tutorials/include/beginner_tutorials/: publisher_member_function.hpp  subscriber_member_function.hpp
beginner_tutorials/launch/: bag_record.launch.py  integration_test.launch.yaml  talker_listener.launch.py
beginner_tutorials/src/: integration_test_node.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
results/ros2_assg_3_imgs/: clang_tidy_output3.txt  cpp_lint_output3.txt  frames_2024-11-14_17.31.31.gv  launch_test_result.txt
results/ros2_assg_3_imgs/rosbag2_2024_11_14-23_05_31/: metadata.yaml  rosbag2_2024_11_14-23_05_31_0.db3
ros2_assg_1_imgs/: cpp-clint-output.txt
